--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.right {
+  background-color: red;
+  height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.left {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.form-container {
+  width: 500px;
 }
 
-.App-link {
-  color: #61dafb;
+.telkom-img{
+  width: 200px;
+  height:200px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  font-size: 48px;
+  margin-bottom: 36px;
+}
+
+.sign-in {
+  display: flex;
+  justify-content: space-between;
 }
